--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,28 @@
+# Core dependencies for auto_scale_development package
 python-dotenv>=0.19.0
+pandas>=1.5.0
+openpyxl>=3.0.0
+numpy>=1.21.0
+
+# LLM API clients
 openai>=1.0.0
 anthropic>=0.7.0
 google-generativeai>=0.3.0
 together>=0.2.0
-pandas>=1.5.0
-openpyxl>=3.0.0
+
+# Machine Learning and NLP
 sentence-transformers>=2.2.0
+transformers>=4.21.0
+torch>=1.13.0
 scikit-learn>=1.0.0
-numpy>=1.21.0 
+factor_analyzer>=0.5.0
+
+# Data processing and training
+datasets>=2.0.0
+
+# Visualization (for EFA plots and analysis notebooks)
+matplotlib>=3.5.0
+
+# Optional: Additional utilities that might be useful
+tqdm>=4.64.0
+requests>=2.28.0 
