--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ together>=0.2.0
 sentence-transformers>=2.2.0
 transformers>=4.21.0
 torch>=1.13.0
+accelerate>=0.26.0
 scikit-learn>=1.0.0
 factor_analyzer>=0.5.0
 
